// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cheapauth is input password is correct 1`] = `
<div
  class="sc-bdVaJa jwzWpU"
  data-approval="false"
  data-testid="cheapauth--root"
>
  <div>
    <section
      aria-labelledby="cheapauth"
      class="section"
    >
      <header
        class="header"
      >
        <h3
          class="title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
      <div>
        <form
          class="form"
          data-testid="cheapauth--form"
        >
          <div
            class="row"
          >
            <input
              class="input"
              data-testid="cheapauth--input"
              type="password"
            />
          </div>
          <div
            class="row"
          >
            <button
              class="submit"
              data-testid="cheapauth--submit"
            >
              ログイン
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</div>
`;

exports[`Cheapauth is input password is correct 2`] = `
<div
  class="sc-bdVaJa jwzWpU"
  data-approval="true"
  data-testid="cheapauth--root"
>
  <div>
    <section
      aria-labelledby="cheapauth"
      class="section"
    >
      <header
        class="header"
      >
        <h3
          class="title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
      <div>
        <form
          class="form"
          data-testid="cheapauth--form"
        >
          <div
            class="row"
          >
            <input
              class="input"
              data-testid="cheapauth--input"
              type="password"
            />
          </div>
          <div
            class="row"
          >
            <button
              class="submit"
              data-testid="cheapauth--submit"
            >
              ログイン
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</div>
`;

exports[`Cheapauth is input password is incorrect 1`] = `
<div
  class="sc-bdVaJa jwzWpU"
  data-approval="false"
  data-testid="cheapauth--root"
>
  <div>
    <section
      aria-labelledby="cheapauth"
      class="section"
    >
      <header
        class="header"
      >
        <h3
          class="title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
      <div>
        <form
          class="form"
          data-testid="cheapauth--form"
        >
          <div
            class="row"
          >
            <input
              class="input"
              data-testid="cheapauth--input"
              type="password"
            />
          </div>
          <div
            class="row"
          >
            <button
              class="submit"
              data-testid="cheapauth--submit"
            >
              ログイン
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</div>
`;

exports[`Cheapauth is input password is incorrect 2`] = `
<div
  class="sc-bdVaJa jwzWpU"
  data-approval="false"
  data-testid="cheapauth--root"
>
  <div>
    <section
      aria-labelledby="cheapauth"
      class="section"
    >
      <header
        class="header"
      >
        <h3
          class="title"
          data-testid="cheapauth--title"
        >
          タイトル
        </h3>
      </header>
      <div>
        <form
          class="form"
          data-testid="cheapauth--form"
        >
          <div
            class="row"
          >
            <input
              class="input"
              data-testid="cheapauth--input"
              type="password"
            />
            <div
              aria-live="assertive"
              class="error-message"
              data-testid="cheapauth--error-message"
            >
              <small>
                パスワードが違います
              </small>
            </div>
          </div>
          <div
            class="row"
          >
            <button
              class="submit"
              data-testid="cheapauth--submit"
            >
              ログイン
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</div>
`;
